//
//  CheckListFreeUITests.swift
//  CheckListFreeUITests
//
//  Created by Igor Mikhalev on 23/07/2019.
//  Copyright © 2019 LeraHome. All rights reserved.
//

import XCTest

class CheckListFreeUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
    func testAddOne() {
        let app = XCUIApplication()
        app.navigationBars["Daily hack list"].buttons["Add"].tap()
        app.textFields["New task"].typeText("Hui")
        app.alerts["Create new task"].buttons["Create"].tap()
    }
    
    func testCheckOnField(){
        let app = XCUIApplication()
        let table = app.tables["tableView"]
        table.cells.staticTexts["123"].tap()

    }
    
    func testDeleteTask(){
        XCUIApplication().tables["tableView"].buttons["Delete"].tap()
    }


}
